logs/lisense.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/lisense'...
Listing './lib/python3.5/site-packages/lisense/commands'...
Compiling './lib/python3.5/site-packages/lisense/commands/guide.py'...
***   File "./lib/python3.5/site-packages/lisense/commands/guide.py", line 29
    print colorize("No such license named %s." % (license), ansi=4)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lisense/commands/list.py'...
***   File "./lib/python3.5/site-packages/lisense/commands/list.py", line 16
    print colorize("Lisense currently supports %d licenses.\n" %
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lisense/commands/new.py'...
***   File "./lib/python3.5/site-packages/lisense/commands/new.py", line 37
    print colorize("No such license named %s." % (license), ansi=196)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lisense/commands/setup.py'...
***   File "./lib/python3.5/site-packages/lisense/commands/setup.py", line 20
    print colorize(
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lisense/config'...
Listing './lib/python3.5/site-packages/lisense/data'...
Listing './lib/python3.5/site-packages/lisense/data/metadata'...
Listing './lib/python3.5/site-packages/lisense/data/template'...
Listing './lib/python3.5/site-packages/lisense/parser'...
Listing './lib/python3.5/site-packages/lisense-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xtermcolor'...
Listing './lib/python3.5/site-packages/xtermcolor-1.3.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
